@@ -66,6 +66,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5341: PigStorage with -tagFile/-tagPath produces incorrect results with column pruning (knoguchi)
+
 PIG-5335: Error message from range projection completely misleading (knoguchi)
 
 PIG-5333: LoadCaster sometimes not set for complex type (knoguchi)
